samples/_failures_safe/1761605119_ce5603_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b90e4f3d.c: In function ‘main’:
./samples/SAFE/__tmp_b90e4f3d.c:163:9: error: expected expression at end of input
  163 |         if (scanf("%d %d %d",
      |         ^~
./samples/SAFE/__tmp_b90e4f3d.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b90e4f3d.c:163:9: error: expected declaration or statement at end of input
